--- a/Manual_for_achitecture_browser/index.asciidoc
+++ b/Manual_for_achitecture_browser/index.asciidoc
@@ -4,8 +4,12 @@ These content help you to know how you can contribute to the content of the arch
 
 === Create Github user
 
-Without a GitHub account you can't contribute on the architecture browser.It is very simple to create an account on GitHub. 
-First, you have to go to GitHub.com and you'll be greeted by the welcome page then click on "sign up",now enter your email address your password and your username. You can choose if you want or not to receive the newsletter of GitHub after to verify your account you can click on "create account" .You will receive automatically a verification email open that and click on the link,your GitHub account is now available.
+Without a GitHub account you can't contribute on the architecture browser.
+
+It is very simple to create an account on GitHub. 
+First, you have to go to GitHub.com and you'll be greeted by the welcome page then click on "sign up", now enter your email address your password and your username. You can choose if you want or not to receive the newsletter of GitHub after to verify your account you can click on "create account" .
+
+You will receive automatically a verification email open that and click on the link,your GitHub account is now available.
 
 === Fetch upstream or fork repository
 
@@ -18,19 +22,19 @@ image::./addManual_image/fork.png[Fork_Repository,100,100]
 
 === Open the repository on Gitpod
 
-"The repository is already on your account." -> "Please go to your fork (https://github.com/<>/architectures) and open the repository in the online IDE Gitpod." 
+"The repository is already on your account." -> "Please go to your fork (https://github.com/<username>/architectures) and open the repository in the online IDE Gitpod." 
 
 You have only to go in the Readme.md and click on "https://gitpod.io/from-referrer/ ". This unique URL will automatically detect which repository it was visited from, and open that in Gitpod (using the Referrer HTTP header).
 
-=== Create or Change tutorial
+=== Create or Change solution
 
-You have the possibility to create a new tutorial. Each tutorial is located in its own directory and consists of an asciidoc file, in which the tutorial is specified. 
-So create a new folder in inside the tutorials directory and the file for the tutorial.
+You have the possibility to create a new solution. Each solution is located in its own directory and consists of an asciidoc file, in which the solution is specified. 
+So create a new folder in inside the solutions directory and the file for the soltution. The file is always named 'index.asciidoc'.
 
 Go to https://github.com/devonfw/architectures/blob/master/solution-template.asciidoc to see a template for creating architecture solutions, copy this file and delete this explanation and adapt.
 Please don't use first-level headlines because they are converted to the page title and not to a headline.
 
-To change a tutorial, select the file of this tutorial, change the content and save.
+To change a solution, select the file of this solution, change the content and save.
 
 ==== Upload file
 
@@ -65,9 +69,11 @@ After doing a push, go to your Git account and create a pull request by clicking
 image::./addManual_image/pr.png[PR]
 That is important to accept CLA if not yet done. For this you will see that on your repository 
 
-image::./addManual_image/tempsnip.png[cla]
+image::./addManual_image/cla.png[cla]
 only you have to do is to click on "Contributor License Agreement". It will send you on the CLA page, now you can agree the CLA.
+
+It can happen CLA does not work with the firefox browser, in this case simply change your browser.
 
 === Stack specific solution
 
-In devonfw we have the principle that we store the documentation together with the code. This also means that architecture snippets that refer to a specific technology stack such as Java or .net are in the repo of this devonfw stack. To do this, create a “solutions” folder in the “documentation” subfolder of the repos. This then has the same structure internally as the “solutions” folder in the architectures repo. When the website is compiled, the folders of the stack repos are integrated into the folder in the architecture repo.
+In devonfw we have the principle that we store the documentation together with the code. This also means that architecture snippets that refer to a specific technology stack such as Java or .net are in the repo of this devonfw stack. To do this, create a “solutions” folder in the “documentation” subfolder of the repos. This then has the same structure internally as the “solutions” folder in the architectures repo. When the website is compiled, the folders of the stack repos are integrated into the folder in the architecture repository.
