--- a/Manual_for_achitecture_browser/index.asciidoc
+++ b/Manual_for_achitecture_browser/index.asciidoc
@@ -76,4 +76,4 @@ It can happen CLA does not work with the firefox browser, in this case simply ch
 
 === Stack specific solution
 
-In devonfw we have the principle that we store the documentation together with the code. This also means that architecture snippets that refer to a specific technology stack such as Java or .net are in the repo of this devonfw stack. To do this, create a “solutions” folder in the “documentation” subfolder of the repos. This then has the same structure internally as the “solutions” folder in the architectures repo. When the website is compiled, the folders of the stack repos are integrated into the folder in the architecture repository.
+In devonfw we have the principle that we store the documentation together with the code. This also means that architecture snippets that refer to a specific technology stack such as Java or .net are in the repo of this devonfw stack. To do this, create a “solutions” folder in the “documentation” subfolder of the repository. This then has the same structure internally as the “solutions” folder in the architectures repo. When the website is compiled, the folders of the stack repository are integrated into the folder in the architecture repository.
