rename cloudwatch + azure changes

--- a/solutions/monitoring_platforms_intro/index.asciidoc
+++ b/solutions/monitoring_platforms_intro/index.asciidoc
@@ -1,6 +1,11 @@
 //Platform=Azure
 //Maturity level=Advanced
 
+:toc: macro
+toc::[]
+:idprefix:
+:idseparator: -
+
 == Monitoring
 === Context & Problem
 ==== Terminology
