--- a/solutions/monitoring_platforms_intro/index.asciidoc
+++ b/solutions/monitoring_platforms_intro/index.asciidoc
@@ -37,7 +37,7 @@ Providing a control plane requires a monitoring pipeline that should be implemen
 
 The picture below summarizes the aspects:
 
-image::monitoring.png[Monitoring,scale=80]
+image::monitoring.png[Monitoring,scale=80%]
 
 ==== Standard Problems
 
