--- a/solutions/monitoring_platforms_intro/index.asciidoc
+++ b/solutions/monitoring_platforms_intro/index.asciidoc
@@ -37,7 +37,7 @@ Providing a control plane requires a monitoring pipeline that should be implemen
 
 The picture below summarizes the aspects:
 
-image::monitoring.png[Monitoring,{half-size}]
+image::monitoring.png[Monitoring,,scalewidth="60%",scaleheight="60%"]
 
 ==== Standard Problems
 
